--- a/main_index.html
+++ b/main_index.html
@@ -49,19 +49,45 @@
             </div>
             <div class="main_body">
                 <div class="inner">
-                    <!-- Slider main container -->
-                    <div class="swiper slide_wrap">
-                        <!-- Additional required wrapper -->
-                        <div class="swiper-wrapper">
-                            <!-- Slides -->
-                            <div class="swiper-slide">Slide 1</div>
-                            <div class="swiper-slide">Slide 2</div>
-                            <div class="swiper-slide">Slide 3</div>
-                            <div class="swiper-slide">Slide 1</div>
-                            <div class="swiper-slide">Slide 2</div>
-                            <div class="swiper-slide">Slide 3</div>
+                    <div class="slide_wrap">
+                        <h2 class="slide_title">오늘의 추천도서</h2>
+                        <!-- Slider main container -->
+                        <div class="swiper">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper">
+                                <!-- Slides -->
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img src="images/book.jpg" alt="원피스">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                    
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
@@ -77,6 +103,8 @@
             slidesPerView: 3,
             spaceBetween: 30,
             freeMode: true,
+            slidesPerView: 5,
+            autoHeight : true,
             navigation: {
                 nextEl: ".swiper-button-next",
                 prevEl: ".swiper-button-prev",
